# kwordquiz

./: .craft.ini  .flatpak-manifest.json  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  AUTHORS  CMakeLists.txt  Makefile.am  kwordquiz.appdata.xml  org.kde.kwordquiz.appdata.xml  snapcraft.yaml
autotests/: CMakeLists.txt  blanktest.cpp  youranswertest.cpp
doc/: CMakeLists.txt  Makefile.am  index.docbook
po/ar/: kwordquiz.po
po/ast/: kwordquiz.po
po/be/: kwordquiz.po
po/bg/: kwordquiz.po
po/bn/: kwordquiz.po
po/br/: kwordquiz.po
po/bs/: kwordquiz.po
po/ca/: kwordquiz.po
po/ca/docs/kwordquiz/: index.docbook
po/ca@valencia/: kwordquiz.po
po/cs/: kwordquiz.po
po/cy/: kwordquiz.po
po/da/: kwordquiz.po
po/de/: kwordquiz.po
po/de/docs/kwordquiz/: index.docbook
po/el/: kwordquiz.po
po/en_GB/: kwordquiz.po
po/eo/: kwordquiz.po
po/es/: kwordquiz.po
po/es/docs/kwordquiz/: index.docbook
po/et/: kwordquiz.po
po/et/docs/kwordquiz/: index.docbook
po/eu/: kwordquiz.po
po/fa/: kwordquiz.po
po/fi/: kwordquiz.po
po/fr/: kwordquiz.po
po/fr/docs/kwordquiz/: index.docbook
po/ga/: kwordquiz.po
po/gl/: kwordquiz.po
po/he/: kwordquiz.po
po/hi/: kwordquiz.po
po/hne/: kwordquiz.po
po/hr/: kwordquiz.po
po/hu/: kwordquiz.po
po/ia/: kwordquiz.po
po/it/: kwordquiz.po
po/it/docs/kwordquiz/: index.docbook
po/ja/: kwordquiz.po
po/ka/: kwordquiz.po
po/kk/: kwordquiz.po
po/km/: kwordquiz.po
po/ko/: kwordquiz.po
po/ko/docs/kwordquiz/: index.docbook
po/lt/: kwordquiz.po
po/lv/: kwordquiz.po
po/mai/: kwordquiz.po
po/mk/: kwordquiz.po
po/ml/: kwordquiz.po
po/mr/: kwordquiz.po
po/ms/: kwordquiz.po
po/nb/: kwordquiz.po
po/nds/: kwordquiz.po
po/ne/: kwordquiz.po
po/nl/: kwordquiz.po
po/nl/docs/kwordquiz/: index.docbook
po/nn/: kwordquiz.po
po/oc/: kwordquiz.po
po/pa/: kwordquiz.po
po/pl/: kwordquiz.po
po/pt/: kwordquiz.po
po/pt/docs/kwordquiz/: index.docbook
po/pt_BR/: kwordquiz.po
po/pt_BR/docs/kwordquiz/: index.docbook
po/ro/: kwordquiz.po
po/ru/: kwordquiz.po
po/ru/docs/kwordquiz/: index.docbook
po/sa/: kwordquiz.po
po/se/: kwordquiz.po
po/si/: kwordquiz.po
po/sk/: kwordquiz.po
po/sl/: kwordquiz.po
po/sl/docs/kwordquiz/: index.docbook
po/sq/: kwordquiz.po
po/sv/: kwordquiz.po
po/sv/docs/kwordquiz/: index.docbook
po/ta/: kwordquiz.po
po/tg/: kwordquiz.po
po/tr/: kwordquiz.po
po/ug/: kwordquiz.po
po/uk/: kwordquiz.po
po/uk/docs/kwordquiz/: index.docbook
po/zh_CN/: kwordquiz.po
po/zh_TW/: kwordquiz.po
src/: CMakeLists.txt  Makefile.am  Messages.sh  audioprober.cpp  audioprober.h  blankanswer.cpp  blankanswer.h  cleardialogbase.ui  columndialogbase.ui  configuration.cpp  configuration.h  dlglanguage.cpp  dlglanguage.h  dlglanguagebase.ui  dlgrc.cpp  dlgrc.h  dlgrcbase.ui  dlgsort.cpp  dlgsort.h  dlgsortbase.ui  dlgspecchar.cpp  dlgspecchar.h  documentsettings.kcfg  eventsrc  exporter.cpp  exporter.h  fileopener.cpp  fileopener.h  filterproxysearchline.cpp  filterproxysearchline.h  flashview.cpp  flashview.h  flashviewbase.ui  grammarmanager.cpp  keduvocdata.cpp  keduvocdata.h  keduvocdocument.cpp  keduvocdocument.h  keduvocexpression.cpp  keduvocexpression.h  (+141 more)
src/examples/: CMakeLists.txt  Makefile.am  example.kvtml  fill_in_the_blank.kvtml  french_verbs.kvtml  us_states_and_capitals.kvtml
src/icons/: CMakeLists.txt  oxsc-apps-kwordquiz.svgz
src/pics/: CMakeLists.txt  Makefile.am  hisc-action-answer.svgz  hisc-action-insert-table-row.svgz  hisc-action-languages.svgz  hisc-action-mode2.svgz  hisc-action-qa.svgz  hisc-action-question.svgz  hisc22-action-multiple.svgz  hisc22-action-question.svgz  oxsc-action-answer.svgz  oxsc-action-check.svgz  oxsc-action-delete-table-row.svgz  oxsc-action-editor.svgz  oxsc-action-error.svgz  oxsc-action-flash.svgz  oxsc-action-insert-table-row.svgz  oxsc-action-languages.svgz  oxsc-action-markasblank.svgz  oxsc-action-mode1.svgz  oxsc-action-mode2.svgz  oxsc-action-mode3.svgz  oxsc-action-mode4.svgz  oxsc-action-mode5.svgz  oxsc-action-multiple.svgz  oxsc-action-qa.svgz  oxsc-action-question.svgz  oxsc-action-unmarkasblank.svgz  oxsc16-action-answer.svgz  oxsc16-action-multiple.svgz  oxsc16-action-question.svgz  oxsc22-action-answer.svgz  oxsc22-action-multiple.svgz  oxsc22-action-question.svgz  sc-actions-delete-table-row.svgz  sc-actions-editor.svgz  sc-actions-flash.svgz  sc-actions-mode1.svgz  sc-actions-mode4.svgz  sc-actions-mode5.svgz  (+1 more)
src/qml/: BasePage.qml  DeckEditorPage.qml  EditAction.qml  FlashCardPage.qml  LanguageSelectorPage.qml  Main.qml  MultipleChoicePage.qml  OptionsAction.qml  QuestionAnswerPage.qml  SettingsPage.qml  SoundPlayer.qml  Visualization.qml  WelcomePage.qml  main.qml
