



########### install files ###############

install( FILES example.kvtml french_verbs.kvtml fill_in_the_blank.kvtml us_states_and_capitals.kvtml  DESTINATION  ${DATA_INSTALL_DIR}/kwordquiz/examples )




#original Makefile.am contents follow:

#kwqdatadir = $(kde_datadir)/kwordquiz/examples
#
#kwqdata_DATA = example.kvtml french_verbs.kvtml fill_in_the_blank.kvtml us_states_and_capitals.kvtml
