datadir = $(kde_datadir)/kwordquiz/pics

data_DATA = tabedit.png tabeditsave.png tabflash.png tabmultiple.png tabqa.png deleterow.png insertrow.png languages.png markasblank.png mode1.png mode2.png mode3.png mode4.png mode5.png sort.png unmarkasblank.png appicon.png correct.png error.png lang1.png lang2.png question.png check.png dontknow.png know.png repeat.png restart.png hint.png pref_edit.png pref_flash.png

KDE_ICON = kwordquiz kwordquiz_doc
